lab3/sashka/policies/constraints/disallow-privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: privileged-containers-are-forbidden

spec:
  enforcementAction: deny

  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
      - local-path-storage

    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod

  parameters:
    exemptImages: []
