lab3/sashka/policies/constraints/required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: workload-required-labels
spec:
  enforcementAction: deny

  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
      - local-path-storage

    kinds:
      - apiGroups:
          - apps
        kinds:
          - Deployment
          - StatefulSet
          - DaemonSet

  parameters:
    message: "workload должен содержать обязательные лейблы владельца"
    labels:
      - key: app.kubernetes.io/name
      - key: app.kubernetes.io/part-of
      - key: owner
