lab3/sashka/policies/constraints/required-probes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
  name: containers-must-have-probes

spec:
  enforcementAction: deny

  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
      - local-path-storage

    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod

  parameters:
    probes:
      - readinessProbe
      - livenessProbe

    probeTypes:
      - httpGet
      - tcpSocket
      - exec
