lab3/sashka/policies/constraints/required-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: containers-must-have-resources

spec:
  enforcementAction: deny

  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - monitoring
      - local-path-storage

    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod

  parameters:
    requests:
      - cpu
      - memory

    limits:
      - cpu
      - memory
